# usbtree

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  Taskfile.yml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: index.html
src/: main.rs  metrics.rs  usb.rs
tapes/: demo.tape
